--- a/public/index.css
+++ b/public/index.css
@@ -1,4 +1,4 @@
-#shippingSchedule1 {
+/* #shippingSchedule1 {
   pointer-events: none;
 }
 #shippingSchedule2 {
@@ -9,4 +9,4 @@
 }
 th {
   text-align: center;
-}
+} */
